--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= productName %></title>
+    <title>WMS</title>
 
     <meta charset="utf-8">
     <meta name="description" content="<%= productDescription %>">
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
   </head>
-  <body>
+  <body class="q-app">
     <!-- quasar:entry-point -->
   </body>
 </html>
